# qt-screen-caster

./: CMakeLists.txt  LICENSE  README.md  main.cpp  stream_worker.cpp
